# dream-team

./: .env.sample  .gitignore  LICENSE  Magenticone_example.py  OAI_CONFIG_LIST .sample  README.md  READMEm.md  app-agnext.py  app.py  azure.yaml  build-dream-team.ipynb  graphrag_comparison.ipynb  magentic_one_helper.py  main.bicep  next-steps.md  procurement_agents.json  requirements-agvnext.txt  requirements.txt  test-magone.py
.devcontainer/: devcontainer.json  post-create.sh
autogen0.2/json templates/: legal_agents.json  marketing_agents.json  research_agents.json
autogen0.2/pages/: 02_run.py
infra/: main.bicep  main.parameters.json
infra/app/: src copy.bicep  src.bicep
logs/: log.jsonl
old_autogen0.2/json templates/: agents_transitions.json
old_autogen0.2/pages/: 01_setup_transitions.py
pages/: 01_setup.py  01_setup_transitions.py  02_run.py  run.py  setup.py
src/: .dockerignore  .env.sample  .gitignore  Dockerfile  app.py  magentic_one_helper.py  pyproject.toml  requirements.txt
